--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Pramod
+<html>
+<head>
+  <style>
+    body {
+      background-color: pink;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      text-align: center;
+      color: white;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 80%;
+    }
+
+    .button {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      border: none;
+      font-size: 32px;
+      cursor: pointer;
+    }
+
+    .yes {
+      background-color: green;
+      color: white;
+    }
+
+    .no {
+      background-color: red;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <h1>Will you be my valentine this year?</h1>
+  <div class="container">
+    <button class="button yes" onclick="yesClicked()">Yes</button>
+    <button class="button no" onclick="noClicked()">No</button>
+  </div>
+  <script>
+    let yesButton = document.querySelector(".yes");
+    let noButton = document.querySelector(".no");
+
+    function yesClicked() {
+      alert("Yay! I love you so much!");
+    }
+
+    function noClicked() {
+      let width = yesButton.offsetWidth;
+      let height = yesButton.offsetHeight;
+      yesButton.style.width = (width + 50) + "px";
+      yesButton.style.height = (height + 50) + "px";
+      yesButton.style.fontSize = (parseInt(yesButton.style.fontSize) + 4) + "px";
+    }
+  </script>
+</body>
+</html>
